<resources>
    <string name="app_name">HashTag</string>
    <string name="tags_activity">Tags</string>
    <string name="hashtags_copied">Hashtags copied</string>
    <string name="do_you_want_open_insta">Do you want to open Instagram</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_label_app_name">Application Name</string>
    <string name="setting_label_version">Build Version</string>
    <string name="setting_label_help">Help</string>
    <string name="setting_title_help">How to use this app?</string>
    <string name="setting_label_rate">Rate Us</string>
    <string name="setting_title_rate">Please support us with your positive review</string>
    <string name="setting_label_share">Share It</string>
    <string name="setting_title_share">Share our app with your friends and family</string>
    <string name="setting_label_contact">Contact Us</string>
    <string name="setting_title_contact">Help us to improve our application</string>
    <string name="setting_label_privacy">Privacy Policy</string>
    <string name="setting_title_privacy">Please Check our privacy policy here</string>
    <string name="mssg_share">Hey my friend(s) check out this amazing application</string>
    <string name="share_via">Share via</string>
    <string name="subject">Subject Here</string>
    <string name="improvement_title">Feedback</string>
    <string name="improvement">Tell us where we can improve as soon as possible</string>
    <string name="submit_btn">Submit</string>
    <string name="never_btn">Never</string>
    <string name="rate_later_btn">Not, Now</string>
    <string name="rate_message">Please, share us how was your experience with us?</string>
    <string name="cancel">Cancel</string>    <string name="update_title">New update available</string>
    <string name="update_mssg">Check out the latest version available to get the latest features and bug fixes</string>
    <string name="positive_btn">Update now</string>
    <string name="negative_btn">Later</string>
    <string name="btn_copy_open_insta">Copy &#38; open instagram</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_rate">RATE</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="big_title_splash">Become more popular and find \n hashtags!</string>
    <string name="small_title_spalsh">You will know how to be more popular, get more \n organic likes and followers from real people.</string>
    <string name="btn_star">START</string>
</resources>
