<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:supportsRtl="true"
    tools:context="com.king.hashtag.Splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="25dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/ic_circle_white"
            android:src="@drawable/ic_trending"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginBottom="15dp"
            android:text="@string/big_title_splash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginBottom="30dp"
            android:text="@string/small_title_spalsh"/>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_star"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
